# hyperlight-samples

./: .gitignore  README.md  justfile  quickjs_hyperlight.patch
guest/: main.c
guest/include/include/: hyperlight_guest.h
hl-quickjs/: Cargo.toml
hl-quickjs/samples/: fib.js  pi_bigint.js
hl-quickjs/src/: main.rs
host/: Cargo.toml
host/samples/: fib_slow.js  pi_bigint.js
host/src/: main.rs
quickjs-2024-01-13/: cutils.c  cutils.h  libbf.c  libregexp.c  libunicode.c  quickjs-libc.c  quickjs.c  quickjs.h
quickjs_guest/: main.c
quickjs_guest/include/include/: hyperlight_guest.h  macro.h
quickjs_guest/include/libc/musl/arch/x86_64/: atomic_arch.h
quickjs_guest/include/libc/musl/arch/x86_64/bits/: alltypes.h  float.h
quickjs_guest/include/libc/musl/include/: alloca.h  ctype.h  endian.h  errno.h  features.h  inttypes.h  limits.h  math.h  stdarg.h  stddef.h  stdio.h  stdlib.h  string.h
samples/: fib_fast.js  pi_bigfloat.js
