[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
hyperlight-host = { path = "../../hyperlight-new/src/hyperlight_host" }
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
clap = { version = "4.5.21", features = ["derive"] }
log = "0.4.22"
env_logger = "0.11.5"
